--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set lowercase image name
-        run: echo "IMAGE_NAME=ghcr.io/${GITHUB_REPOSITORY,,}:latest" >> $GITHUB_ENV
-
+        run: echo "IMAGE_NAME=ghcr.io/${{ github.actor }}/gcp:latest" >> $GITHUB_ENV
+      
       - name: Build and push Docker image
         run: |
           docker build -t $IMAGE_NAME .
