--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 sqlalchemy==2.0.18
-databases==0.6.3
+databases>=0.6.0,<0.7.0
 asyncpg==0.27.0
 pydantic[email]==2.0.7
 python-jose[cryptography]==3.3.0
