--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.22.0
 sqlalchemy==2.0.18
 databases>=0.6.0,<0.7.0
 asyncpg==0.27.0
-pydantic[email]==2.0.7
+pydantic==1.10.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.31.0
