--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-sqlalchemy==2.0.18
+sqlalchemy>=1.4,<1.5
 databases>=0.6.0,<0.7.0
 asyncpg==0.27.0
 pydantic==1.10.9
