--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,27 +12,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
       - name: Configure Docker
-        run: |-
-          gcloud auth configure-docker
+        run: gcloud auth configure-docker
 
       - name: Build Docker image
-        run: |-
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-platform:latest .
+        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-platform:latest .
 
       - name: Push Docker image
-        run: |-
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-platform:latest
+        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-platform:latest
 
-      - name: Deploy to GKE
-        run: |-
+      - name: Deploy to Cloud Run
+        run: |
           gcloud run deploy ai-cyber-platform \
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-platform:latest \
             --region ${{ secrets.GCP_REGION }} \
