--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,30 @@
+# nginx/default.conf
+
 server {
     listen 80;
     server_name quantum-ai.asia www.quantum-ai.asia;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    # Serve React static assets
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
     }
 
+    # If the request is not /api/* or /static/*, serve index.html (React SPA)
     location / {
-        return 301 https://$host$request_uri;
+        try_files $uri /index.html;
     }
-}
 
-server {
-    listen 443 ssl;
-    server_name quantum-ai.asia www.quantum-ai.asia;
+    # Proxy any /api/* request to Uvicorn (FastAPI) on port 8000
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host                $host;
+        proxy_set_header X-Real-IP           $remote_addr;
+        proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto   $scheme;
+    }
 
-    ssl_certificate /etc/ssl/quantum-ai.asia/fullchain.pem;
-    ssl_certificate_key /etc/ssl/quantum-ai.asia/quantum-ai.asia.key;
-    ssl_trusted_certificate /etc/ssl/quantum-ai.asia/DigiCertCA.crt;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-
-    location / {
-        proxy_pass http://backend:8000;  # Adjust backend address if different
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Optional: health check endpoint (Cloud Run pings /)
+    location /health {
+        return 200 "OK\n";
     }
 }
