--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,29 +1,28 @@
-# nginx/default.conf
-
 server {
-    listen 80;
+    # Listen on port 8080 (Cloud Run will forward HTTP(S) → this port)
+    listen 8080;
     server_name quantum-ai.asia www.quantum-ai.asia;
 
-    # Serve React static assets
+    # 1) Serve React static assets under /static/
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # If the request is not /api/* or /static/*, serve index.html (React SPA)
+    # 2) For any path not starting with /api, serve index.html (React SPA)
     location / {
         try_files $uri /index.html;
     }
 
-    # Proxy any /api/* request to Uvicorn (FastAPI) on port 8000
+    # 3) Proxy /api/* calls to FastAPI at localhost:8000
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host                $host;
-        proxy_set_header X-Real-IP           $remote_addr;
-        proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto   $scheme;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # Optional: health check endpoint (Cloud Run pings /)
+    # 4) (Optional) A simple health‐check endpoint Cloud Run can use
     location /health {
         return 200 "OK\n";
     }
