--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,21 @@
 server {
-    # Listen on port 8080 (Cloud Run will forward HTTP(S) → this port)
+    # Cloud Run forwards HTTP(S) → container port 8080
     listen 8080;
     server_name quantum-ai.asia www.quantum-ai.asia;
 
-    # 1) Serve React static assets under /static/
+    # 1) Serve React’s static build under /static/
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # 2) For any path not starting with /api, serve index.html (React SPA)
+    # 2) For any path that does NOT start with /api, serve React’s index.html
+    #    (so client‐side routing works)
     location / {
+        root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
-    # 3) Proxy /api/* calls to FastAPI at localhost:8000
+    # 3) Proxy ALL /api/* requests to FastAPI at 127.0.0.1:8000
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host               $host;
@@ -22,7 +24,7 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # 4) (Optional) A simple health‐check endpoint Cloud Run can use
+    # 4) (Optional) A simple health‐check endpoint
     location /health {
         return 200 "OK\n";
     }
