--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,30 +1,30 @@
 server {
-    # Cloud Run forwards HTTP(S) → container port 8080
+    # Cloud Run will forward HTTP ➔ container port 8080
     listen 8080;
     server_name quantum-ai.asia www.quantum-ai.asia;
 
-    # 1) Serve React’s static build under /static/
+    # 1) Serve React’s production build under /static/
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # 2) For any path that does NOT start with /api, serve React’s index.html
-    #    (so client‐side routing works)
+    # 2) For any path not starting with /api, serve React's index.html
+    #    (client-side routing for a SPA)
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
-    # 3) Proxy ALL /api/* requests to FastAPI at 127.0.0.1:8000
+    # 3) Proxy all /api/* requests to FastAPI (Uvicorn) at 127.0.0.1:8000
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 4) (Optional) A simple health‐check endpoint
+    # 4) Health check endpoint (optional)
     location /health {
         return 200 "OK\n";
     }
