--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ asyncpg==0.27.0
 pydantic==1.10.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 requests==2.31.0
 httpx==0.24.1
 slack-sdk==3.21.3
