--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,41 +1,32 @@
 server {
-    ##
-    ## Cloud Run will forward HTTP(S) → container port 8080
-    ##
+    # Cloud Run forwards HTTP(S) → container port 8080:
     listen 8080 default_server;
-    server_name _;   # Accept any hostname
+    # We do NOT hardcode “server_name"; we accept whatever host 
+    # Cloud Run gives us (the .run.app URL or your eventual custom domain).
+    server_name _;  
 
-    # ───────────────────────────────────────────────────────────────────────────
-    # 1) Serve React’s static build under /static/
-    #    (After you build, React’s “build/static/*” assets live in /usr/share/nginx/html/static/)
-    # ───────────────────────────────────────────────────────────────────────────
+    # 1) Serve React static files under /static/
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # ───────────────────────────────────────────────────────────────────────────
-    # 2) For any path that does NOT start with /api, serve React’s index.html
-    #    (so client-side routing works)
-    # ───────────────────────────────────────────────────────────────────────────
+    # 2) Any path NOT starting with /api, serve the React index.html
+    #    (so client‐side routes /login, /dashboard, etc. work)
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
-    # ───────────────────────────────────────────────────────────────────────────
-    # 3) Proxy ALL /api/* requests to FastAPI at 127.0.0.1:8000
-    # ───────────────────────────────────────────────────────────────────────────
+    # 3) Proxy /api/... → FastAPI on localhost:8000
     location /api/ {
-        proxy_pass         http://127.0.0.1:8000;
-        proxy_set_header   Host               $host;
-        proxy_set_header   X-Real-IP          $remote_addr;
-        proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto  $scheme;
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # ───────────────────────────────────────────────────────────────────────────
-    # 4) (Optional) A simple health-check endpoint Cloud Run can use
-    # ───────────────────────────────────────────────────────────────────────────
+    # 4) (Optional) simple health‐check
     location /health {
         return 200 "OK\n";
     }
