--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,21 @@
-server {
-    # Cloud Run forwards HTTP(S) → container port 8080:
-    listen 8080 default_server;
-    # We do NOT hardcode “server_name"; we accept whatever host 
-    # Cloud Run gives us (the .run.app URL or your eventual custom domain).
-    server_name _;  
+# nginx/default.conf
 
-    # 1) Serve React static files under /static/
+server {
+    listen 8080;
+    server_name _;     # use wildcard; Cloud Run will route based on Host header
+
+    # 1) Serve React static build under /static/
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # 2) Any path NOT starting with /api, serve the React index.html
-    #    (so client‐side routes /login, /dashboard, etc. work)
+    # 2) For any path that does NOT start with /api, serve React’s index.html
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
-    # 3) Proxy /api/... → FastAPI on localhost:8000
+    # 3) Proxy /api/* requests to FastAPI at localhost:8000
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host               $host;
@@ -26,7 +24,7 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # 4) (Optional) simple health‐check
+    # 4) Health endpoint (optional)
     location /health {
         return 200 "OK\n";
     }
