--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,29 +2,44 @@
 
 server {
     listen 8080;
-    server_name _;     # use wildcard; Cloud Run will route based on Host header
+    server_name _;
 
-    # 1) Serve React static build under /static/
+    # 1) Serve React static build
+    # No changes here
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # 2) For any path that does NOT start with /api, serve React’s index.html
+    # 2) For any path that does NOT start with /api or /ws, serve React’s index.html
+    # No changes here
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
-    # 3) Proxy /api/* requests to FastAPI at localhost:8000
+    # 3) Proxy /api/* requests to FastAPI
+    # No changes here
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host               $host;
-        proxy_set_header X-Real-IP          $remote_addr;
-        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # --- ADD THIS BLOCK TO SUPPORT WEBSOCKETS ---
+    # 4) Proxy /ws/* requests to the FastAPI WebSocket endpoint
+    location /ws/ {
+        proxy_pass http://127.0.0.1:8000/ws/; # The path here must match the backend
+        proxy_http_version 1.1;
+        # These headers are required to upgrade the connection to a WebSocket
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 
-    # 4) Health endpoint (optional)
+    # 5) Health endpoint (optional)
+    # No changes here
     location /health {
         return 200 "OK\n";
     }
