--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "recharts": "^2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
