--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
+# backend/requirements.txt
+
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 sqlalchemy>=1.4,<1.5
@@ -22,3 +24,4 @@ transformers==4.31.0
 grpcio==1.56.0
 itsdangerous==2.1.2
 google-auth==2.20.0
+google-cloud-secret-manager==2.16.2  # <-- ADDED for better secret management
