--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,4 @@ jobs:
 
       # 6) Deploy to Cloud Run
       - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy ai-cyber-fullstack \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-fullstack:latest \
-            --region us-central1 \
-            --platform managed \
-            --allow-unauthenticated \
-            --port 8080 \
-            --add-cloudsql-instances ${{ secrets.DB_CONNECTION_NAME }} \
-            --update-env-vars="DATABASE_URL=postgresql+psycopg2://postgres:${{ secrets.DB_PASSWORD }}@/cyberdb?host=/cloudsql/${{ secrets.DB_CONNECTION_NAME }},GOOGLE_REDIRECT_URI=https://quantum-ai.asia/api/auth/callback,FRONTEND_URL=https://quantum-ai.asia,DOMAIN=quantum-ai.asia,GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }},SESSION_SECRET_KEY=${{ secrets.SESSION_SECRET_KEY }}"
+        run: gcloud run deploy ai-cyber-fullstack --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ai-cyber-fullstack:latest --region us-central1 --platform managed --allow-unauthenticated --port 8080 --add-cloudsql-instances ${{ secrets.DB_CONNECTION_NAME }} --update-env-vars="DATABASE_URL=postgresql+psycopg2://postgres:${{ secrets.DB_PASSWORD }}@/cyberdb?host=/cloudsql/${{ secrets.DB_CONNECTION_NAME }},GOOGLE_REDIRECT_URI=https://quantum-ai.asia/api/auth/callback,FRONTEND_URL=https://quantum-ai.asia,DOMAIN=quantum-ai.asia,GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }},SESSION_SECRET_KEY=${{ secrets.SESSION_SECRET_KEY }}"
