--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,3 +25,4 @@ grpcio==1.56.0
 itsdangerous==2.1.2
 google-auth==2.20.0
 google-cloud-secret-manager==2.16.2  # <-- ADDED for better secret management
+Authlib
