--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,4 @@ google-cloud-secret-manager==2.16.2  # <-- ADDED for better secret management
 Authlib
 joblib
 google-cloud-storage
+pydantic-settings
