--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,11 @@
 # backend/requirements.txt
 
-fastapi==0.95.2
+fastapi>=0.109.0
 uvicorn[standard]==0.22.0
 sqlalchemy>=1.4,<1.5
 databases>=0.6.0,<0.7.0
 asyncpg==0.27.0
-pydantic==1.10.9
+pydantic>=2.7.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
@@ -28,5 +28,5 @@ google-cloud-secret-manager==2.16.2  # <-- ADDED for better secret management
 Authlib
 joblib
 google-cloud-storage
-pydantic-settings
+pydantic-settings>=2.0.0
 PyYAML>=6.0.1
