--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
