--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,13 +18,19 @@ server {
     }
 
     # 3) Proxy /api/* requests to FastAPI
-    # No changes here
     location /api/ {
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Increase timeout settings for slow API calls
+        proxy_connect_timeout       300s;
+        proxy_send_timeout          300s;
+        proxy_read_timeout          300s;
+        proxy_buffering             off;
+        proxy_request_buffering     off;
     }
     
     # --- ADD THIS BLOCK TO SUPPORT WEBSOCKETS ---
