--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,10 @@
-# backend/requirements.txt
-
-fastapi>=0.109.0
+# Production Requirements (matching GCP environment - fixed compatibility)
+fastapi==0.104.1
 uvicorn[standard]==0.22.0
-sqlalchemy>=1.4,<1.5
-databases>=0.6.0,<0.7.0
+sqlalchemy==1.4.41
+databases==0.6.2
 asyncpg==0.27.0
-pydantic>=2.7.0
+pydantic==2.7.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
@@ -15,23 +14,25 @@ slack-sdk==3.21.3
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 aiohttp==3.8.5
+
+# ML Dependencies (CPU optimized for compatibility)
 scikit-learn==1.3.0
 numpy==1.26.4
 pandas==2.0.3
 tensorflow==2.14.0
 torch==2.0.1
-transformers==4.31.0
-grpcio==1.56.0
+transformers==4.30.2
+grpcio==1.54.2
 itsdangerous==2.1.2
-google-auth==2.20.0
-google-cloud-secret-manager==2.16.2  # <-- ADDED for better secret management
-Authlib
-joblib
-google-cloud-storage
-pydantic-settings>=2.0.0
-PyYAML>=6.0.1
-openai
-statsmodels
-google.cloud.compute
-neo4j
-APScheduler>=3.10.0  # AI incident orchestration scheduler
+google-auth==2.17.3
+google-cloud-secret-manager==2.16.2
+Authlib==1.2.1
+joblib==1.3.0
+google-cloud-storage==2.8.0
+pydantic-settings==2.0.3
+PyYAML==6.0.1
+openai==0.27.8
+statsmodels==0.14.0
+google-cloud-compute==1.11.0
+neo4j==5.8.0
+APScheduler==3.10.1
