feat: complete development authentication bypass
- Created environment-aware App.jsx that detects VM vs production
- Added DevLogin.jsx for automatic development login
- Created DevUserContext.jsx with auto-authenticated user
- Added environment detection utilities
- Updated docker-compose.vm.yml with auth bypass env vars
- Enhanced backend auth.py with DEV_MODE detection
- Added production auth protection in .gitignore

✅ Development environment now has no auth barriers
🔒 Production authentication remains fully intact
🛡️ Safety features prevent auth bypass in production

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,12 @@ cyberdb.sqlite
 dev-workflow/
 sync-to-vm.sh
 vm-dev-manager.sh
+
+# =====================================
+# Production Authentication Protection
+# =====================================
+# These files should NEVER be in dev branch
+google-auth-config.json
+oauth-secrets.json
+production-auth.yaml
+.env.production
