✨ Essential development environment updates
🔧 Core Fixes:
- Fixed AI Executive Summary to use local AI service (backend/correlation_service.py)
- Enhanced .gitignore to exclude environment files and temporary test files

🚀 Production Infrastructure:
- Added production Nginx configuration with SSL, security headers, rate limiting
- Production Docker configuration with multi-stage builds
- Kubernetes deployment configuration for scalable deployment
- Production deployment script with environment management

📋 Documentation:
- Comprehensive Quantum AI integration documentation
- Production deployment guide and procedures
- AI providers backend integration

🛡️ Security:
- Environment file exclusion from version control
- Production authentication protection maintained
- Secure deployment configurations

Status: Development environment cleaned and production-ready configurations added.

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,18 @@ google-auth-config.json
 oauth-secrets.json
 production-auth.yaml
 .env.production
+
+# Development environment files (keep credentials secure)
+.env.ai
+.env.dev
+.env.development
+.env.local
+*.local
+vm_credentials.txt
+
+# Test files (temporary/development only)
+simple_main.py
+test_api.py
+test_forecaster.py
+test_quantum_ai_integration.py
+CHANGES_SUMMARY.md
