--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,9 @@ psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 aiohttp==3.8.5
 
+# System monitoring and health
+psutil==5.9.6
+
 # ML Dependencies (CPU optimized for compatibility)
 scikit-learn==1.3.0
 numpy==1.26.4
