Complete comprehensive branding transformation: Quantum/CXyber → Sentient AI
✅ File & Directory Renames (50+ files):
• CXYBER_AI_INTEGRATION.md → SENTIENT_AI_INTEGRATION.md
• QUANTUM_AI_INTEGRATION.md → SENTIENT_AI_INTEGRATION_QUANTUM.md
• cxyber_ai_soc_suite/ → sentient_ai_soc_suite/
• cxyber_ai_soc_suite_connectors/ → sentient_ai_soc_suite_connectors/
• docker-compose.cxyber.yml → docker-compose.sentient.yml
• start-cxyber-soc.sh → start-sentient-soc.sh

✅ Text Content Updates:
• Backend services: 'Quantum AI' → 'Sentient AI' references
• Domain migration: qai.quantum-ai.asia → sentient.ai-soc.com
• API endpoints: quantum-predictor → sentient-predictor
• Service configurations and documentation aligned

✅ Docker & Infrastructure:
• Container orchestration files updated
• SSL certificate paths migrated
• Environment variable references updated

All 131 unsaved files now properly saved and committed with complete brand alignment.

--- a/docker-compose.sentient.yml
+++ b/docker-compose.sentient.yml
@@ -100,7 +100,7 @@ services:
       timeout: 10s
       retries: 3
 
-  # Model C: Quantum AI Predictive Security Engine (Your trained models)
+  # Model C: Sentient AI Predictive Security Engine (Your trained models)
   threat-model:
     build:
       context: .
